--- a/.project.json
+++ b/.project.json
@@ -42,6 +42,11 @@
       "templateId": "build_import_prototype",
       "templateVersion": "1.0.0",
       "dateTimeStamp": "Wed, 29 Nov 2017 15:16:31 GMT"
+    },
+    {
+      "templateId": "servicecatalog.connectivityComponent",
+      "templateVersion": "0.0.0",
+      "dateTimeStamp": "Sun, 03 Dec 2017 23:23:01 GMT"
     }
   ],
   "translation": {
@@ -54,6 +59,13 @@
   "hcpdeploy": {
     "account": "p1942913203trial",
     "name": "applipoleemploi",
-    "lastVersionWeTriedToDeploy": "1.0.6"
+    "lastVersionWeTriedToDeploy": "1.0.7"
+  },
+  "mockpreview": {
+    "mockUri": "/datasappe/applisappe/services/applisappe.xsodata",
+    "metadataFilePath": "",
+    "loadJSONFiles": false,
+    "loadCustomRequests": false,
+    "mockRequestsFilePath": ""
   }
 }
