--- a/neo-app.json
+++ b/neo-app.json
@@ -1,29 +1,34 @@
 {
-	"welcomeFile": "webapp/test/testFLPService.html",
-	"routes": [
-
-		{
-			"path": "/resources",
-			"target": {
-				"type": "service",
-				"name": "sapui5",
-				"version": "1.48.6",
-				"preferLocal": true,
-				"entryPath": "/resources"
-			},
-			"description": "SAPUI5 Resources"
-		}, {
-			"path": "/test-resources",
-			"target": {
-				"type": "service",
-				"version": "1.48.6",
-				"name": "sapui5",
-				"entryPath": "/test-resources"
-			},
-			"description": "SAPUI5 Test Resources"
-		}
-	],
-	"authenticationMethod": "none",
-
-	"sendWelcomeFileRedirect": true
+  "welcomeFile": "webapp/test/testFLPService.html",
+  "routes": [
+    {
+      "path": "/resources",
+      "target": {
+        "type": "service",
+        "name": "sapui5",
+        "preferLocal": true,
+        "entryPath": "/resources"
+      },
+      "description": "SAPUI5 Resources"
+    },
+    {
+      "path": "/test-resources",
+      "target": {
+        "type": "service",
+        "name": "sapui5",
+        "entryPath": "/test-resources"
+      },
+      "description": "SAPUI5 Test Resources"
+    },
+    {
+      "path": "/datasappe",
+      "target": {
+        "type": "destination",
+        "name": "datasappe"
+      },
+      "description": "Connexion bdd sap pole emploi"
+    }
+  ],
+  "authenticationMethod": "none",
+  "sendWelcomeFileRedirect": true
 }
