--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -51,7 +51,9 @@
 			"tablet": true,
 			"phone": true
 		},
-		"supportedThemes": ["sap_bluecrystal"]
+		"supportedThemes": [
+			"sap_bluecrystal"
+		]
 	},
 	"sap.ui5": {
 		"_version": "1.1.0",
@@ -109,7 +111,9 @@
 				"clearTarget": false,
 				"controlAggregation": "pages",
 				"bypassed": {
-					"target": ["Scan"]
+					"target": [
+						"Scan"
+					]
 				}
 			},
 			"targets": {
@@ -184,51 +188,85 @@
 					"transition": "slide"
 				}
 			},
-			"routes": [{
-				"pattern": "Scan/:context:",
-				"name": "Scan",
-				"target": ["Scan"]
-			}, {
-				"pattern": "",
-				"name": "default",
-				"target": ["Connexion"]
-			}, {
-				"pattern": "Connexion/:context:",
-				"name": "Connexion",
-				"target": ["Connexion"]
-			}, {
-				"pattern": "Regions/:context:",
-				"name": "Regions",
-				"target": ["Regions"]
-			}, {
-				"pattern": "Villes/:context:",
-				"name": "Villes",
-				"target": ["Villes"]
-			}, {
-				"pattern": "Batiments/:context:",
-				"name": "Batiments",
-				"target": ["Batiments"]
-			}, {
-				"pattern": "Accueil/:context:",
-				"name": "Accueil",
-				"target": ["Accueil"]
-			}, {
-				"pattern": "Bureau/:context:",
-				"name": "Bureau",
-				"target": ["Bureau"]
-			}, {
-				"pattern": "DetailInventaire/:context:",
-				"name": "DetailInventaire",
-				"target": ["DetailInventaire"]
-			}, {
-				"pattern": "Famille/:context:",
-				"name": "Famille",
-				"target": ["Famille"]
-			}, {
-				"pattern": "CreationBien/:context:",
-				"name": "CreationBien",
-				"target": ["CreationBien"]
-			}]
+			"routes": [
+				{
+					"pattern": "Scan/:context:",
+					"name": "Scan",
+					"target": [
+						"Scan"
+					]
+				},
+				{
+					"pattern": "",
+					"name": "default",
+					"target": [
+						"Connexion"
+					]
+				},
+				{
+					"pattern": "Connexion/:context:",
+					"name": "Connexion",
+					"target": [
+						"Connexion"
+					]
+				},
+				{
+					"pattern": "Regions/:context:",
+					"name": "Regions",
+					"target": [
+						"Regions"
+					]
+				},
+				{
+					"pattern": "Villes/:context:",
+					"name": "Villes",
+					"target": [
+						"Villes"
+					]
+				},
+				{
+					"pattern": "Batiments/:context:",
+					"name": "Batiments",
+					"target": [
+						"Batiments"
+					]
+				},
+				{
+					"pattern": "Accueil/:context:",
+					"name": "Accueil",
+					"target": [
+						"Accueil"
+					]
+				},
+				{
+					"pattern": "Bureau/:context:",
+					"name": "Bureau",
+					"target": [
+						"Bureau"
+					]
+				},
+				{
+					"pattern": "DetailInventaire/:context:",
+					"name": "DetailInventaire",
+					"target": [
+						"DetailInventaire"
+					]
+				},
+				{
+					"pattern": "Famille/:context:",
+					"name": "Famille",
+					"target": [
+						"Famille"
+					]
+				},
+				{
+					"pattern": "CreationBien/:context:",
+					"name": "CreationBien",
+					"target": [
+						"CreationBien"
+					]
+				}
+			]
 		}
 	},
 	"sap.platform.hcp": {
